--- a/Web.config
+++ b/Web.config
@@ -26,6 +26,9 @@
 	  <add key="CustomerConnectUrl" value="http://178.23.187.207:91/WS/" />
 	  <add key="Stamped_URL" value="http://178.23.187.207:91/WS"/>
 	  <add key="BackendUrl" value="https://uom-sfa.dev-ts.online/"/>
+	  <add key="LicenseURL" value="https://license.dev-ts.online/API/License/GetLicenseDetails"/>
+	  <add key="LicenseKey" value="lWnXQTujzOO+47+I+R2DwPGbRpUjc6YrKrHTXU0ajIU="/>
+	  <add key="LicenseUpdateURL" value="https://license.dev-ts.online/API/License/UpdateLicenseInfo"/>
   </appSettings>
 	<connectionStrings>
 		<!--<add name="ApplicationServices" connectionString="server=178.23.187.164,2344; uid=sa; pwd=Benchmark123; database=SFA_UAT24JUN24; Language=British;max pool size=200;" />-->
